# FPBInject

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  README.md  README_zh.md
.github/workflows/: ci.yml
.kiro/settings/: mcp.json
.kiro/steering/: firmware-dev.md  mcp-fpbinject.md  project-overview.md  webserver-dev.md
App/blink/: blink.cpp  blink.h
App/func_loader/: fl.c  fl.h  fl_allocator.c  fl_allocator.h  fl_file.c  fl_file.h  fl_file_fatfs.c  fl_file_libc.c  fl_file_posix.c  fl_log.c  fl_log.h  fl_port_arduino.cpp  fl_port_nuttx.c  fl_stream.c  fl_stream.h  func_allocator.c  func_allocator.h  func_allocator_test.c  func_loader.c  func_loader.h  func_loader_file.c  func_loader_file.h  func_loader_file_fatfs.c  func_loader_file_libc.c  func_loader_file_posix.c  func_loader_log.c  func_loader_log.h  func_loader_port_arduino.cpp  func_loader_port_nuttx.c  func_loader_stream.c  func_loader_stream.h  umm_malloc_cfgport.h
App/func_loader/argparse/: argparse.c  argparse.h
App/func_loader/umm_malloc/src/: umm_info.c  umm_integrity.c  umm_malloc.c  umm_malloc.h  umm_malloc_cfg.h  umm_poison.c
App/inject/: inject.cpp  patch_WString_toUpperCase.cpp
App/test/: test.cpp  test.h
App/tests/: CMakeLists.txt  fpb_mock_regs.c  fpb_mock_regs.h  mock_fatfs.c  mock_fatfs.h  mock_hardware.c  mock_hardware.h  run_tests.sh  stubs.c  stubs.h  test.cpp  test.h  test_fl.c  test_fl_allocator.c  test_fpb_debugmon.c  test_fpb_debugmon_nuttx.c  test_fpb_inject.c  test_fpb_trampoline.c  test_framework.c  test_framework.h  test_func_allocator.c  test_func_loader.c  test_func_loader_file.c  test_func_loader_file_fatfs.c  test_func_loader_stream.c  test_main.c  test_main_fatfs.c
Docs/: Architecture.md  CLI.md  FPB_Remap_Table_Bug_Analysis.md  WebServer.md  inject_function_refactor_proposal.md
Project/Application/: main.cpp
Project/Platform/STM32F10x/Core/: SPI.cpp  syscalls.c
Project/Platform/STM32F10x/Startup/: STM32F103C8_FLASH.ld
Source/: flash_patch.c  flash_patch.h  fpb_debugmon.c  fpb_debugmon.h  fpb_debugmon_nuttx.c  fpb_inject.c  fpb_inject.h  fpb_test.c  fpb_test.h  fpb_trampoline.c  fpb_trampoline.h  fpbinject_version.h  trampoline.c  trampoline.h
Tools/: adb2serial.py  build_test.sh  cmake_format.sh  code_format.sh  flash.sh  format.sh  fpb_loader.py  install-prerequisites.sh  kconfig_lint.py  pdf_parser.py  prerequisites-apt.txt  requirements.txt  test_serial.py  update_version.py
Tools/WebServer/: .gitignore  README.md  REFACTOR_PLAN.md  check_api.py  device_worker.py  file_watcher.py  format.sh  fpb_cli.py  fpb_inject.py  fpb_mcp_server.py  main.py  package.json  patch_generator.py  routes.py  scan_chinese.py  serial_utils.py  state.py  timer.py  version.py  worker.py
Tools/WebServer/app/: __init__.py  middleware.py
Tools/WebServer/app/routes/: __init__.py  connection.py  files.py  fpb.py  logs.py  patch.py  symbols.py  transfer.py  watch.py
Tools/WebServer/cli/: __init__.py  fpb_cli.py
Tools/WebServer/core/: __init__.py  compile_commands.py  compiler.py  config_schema.py  elf_utils.py  file_transfer.py  gdb_bridge.py  gdb_json_print.py  gdb_manager.py  gdb_session.py  linker_script.py  patch_generator.py  safe_parser.py  serial_protocol.py  state.py
Tools/WebServer/docs/: Auto_Reinject_Design.md  CONFIG_REFACTOR_PLAN.md  CRC_Integrity_Audit.md  FILE_TRANSFER_DESIGN.md  I18N_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LOG_FILE_RECORDING.md  LOG_FILE_USAGE.md  QUICKSTART_LOG_FILE.md  SKILLS.md  SSE_Connection_Issue.md  Security-Robustness-Refactoring.md  auto-inject-bugfix-postmortem.md  auto-reinject-design.md  config-refactor-plan.md  cpp-injection-support-analysis.md  file-transfer-design.md  frontend-upgrade-proposal.md  gdb-integration-feasibility.md  granular-progress-design.md  i18n-implementation.md  inplace-compile-design.md  log-file-recording.md  refactor-plan.md  security-token-design.md  serial-quick-command-design.md  sse-connection-issue.md  symbol-test-report.md  symbol-variable-viewer-design.md  symbol_test_report.md  tutorial-inject-demo-design.md  tutorial-system-design.md  watch-expression-design.md
Tools/WebServer/services/: __init__.py  device_worker.py  file_watcher.py  file_watcher_manager.py  log_recorder.py  timer.py
Tools/WebServer/static/css/: style.css  tutorial.css  workbench.css
Tools/WebServer/static/js/: app.js
Tools/WebServer/templates/: base.html  index.html  inject.ld.in
Tools/WebServer/templates/partials/: activitybar.html  editor.html  modals.html  scripts.html  (+8 more)
Tools/WebServer/test/: coverage_analyzer.py  run_tests.py  test_api.py  test_device_worker.py  test_file_watcher.py  test_fpb_inject.py  test_frontend.js  test_patch_generator.py  test_routes.py  test_serial_utils.py  test_state.py  test_timer.py  test_worker.py
Tools/WebServer/tests/: check_api.py  run_tests.py  scan_chinese.py  test_api.py  test_app_init.py  test_auth.py  test_compile_inplace.py  test_compiler.py  test_compiler_coverage.py  test_compiler_extended.py  test_config_schema.py  test_device_worker.py  test_elf_symbols.py  test_elf_utils.py  test_elf_watcher.py  test_file_routes.py  test_file_transfer.py  test_file_transfer_spaces.py  test_file_watcher.py  test_file_watcher_manager.py  test_find_function_signature.py  test_fpb_cli.py  test_fpb_inject.py  test_fpb_routes.py  test_frontend.js  test_gdb_integration.py  test_gdb_session.py  test_helpers.py  test_i18n.py  test_linker_script.py  test_log_file_routes.py  test_log_recorder.py  test_main.py  test_mcp_server.py  test_patch_generator.py  test_routes.py  test_safe_parser.py  test_serial_protocol.py  test_serial_utils.py  test_state.py  (+9 more)
Tools/WebServer/utils/: __init__.py  crc.py  helpers.py  serial.py  toolchain.py
Tools/nuttx_mock/: CMakeLists.txt  dirent.h  fcntl.h  nuttx_mock.c  nuttx_mock.h  syslog.h  unistd.h
Tools/nuttx_mock/arch/: irq.h
Tools/nuttx_mock/nuttx/: arch.h  cache.h  config.h  irq.h  sched.h
Tools/nuttx_mock/sys/: stat.h
cmake/: arm-none-eabi-gcc.cmake  arm-none-eabi.cmake  library.cmake  nuttx.cmake  stm32f103.cmake
(+58 files in other folders)
